--- a/index.html
+++ b/index.html
@@ -1,12 +1,42 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="style.css">
-	<title></title>
+	<title>Degenerate Blackjack</title>
 </head>
 <body>
 
+<div class="container-fluid"> </div>
+<div class="row"></div>
+<!--Table-->
+
+<div id="outcome" class="col-xs-12">Deal Me In, Jack!</div>
+
+<div class ="buttons">
+<button type="button" id="deal" class="btn btn-primary btn-lg">Deal</button>
+<button type="button" id="hitMe" class="btn btn-warning btn-lg">Hit Me</button>
+<button type="button" id="hold" class="btn btn-danger btn-lg">Hold</button>
+</div>
+
+
+<div class="col-xs-12 col-md-8 title">
+<div class="container board">
+        <div class="col-xs-12">
+          <p class="hand-label">Dealer's hand:</p>
+          <div id="dealerHand" class="hand"><img src="http://blackjack.wojtekmurawski.me/img/XX.jpg"><img src="http://blackjack.wojtekmurawski.me/img/XX.jpg"></div>
+        </div>
+
+</div>
+
+ <div class="col-xs-12">
+          <p class="hand-label">Player's hand: </p>
+          <div id="playerHand" class="hand"><img src="http://blackjack.wojtekmurawski.me/img/XX.jpg"><img src="http://blackjack.wojtekmurawski.me/img/XX.jpg"></div>
+        </div>
+        <div class="col-xs-12">
+          <!-- <p class="value-label">Player's hand value: <span id="playerHandValue">0</span></p> -->
+        </div>
+        
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.js"></script>
 <script type="text/javascript" src="script.js"></script>
 </body>
