deal_hitMe_hitDealer_checkPlayerHand_functions_added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
 
+<!-- <audio autoplay="autoplay" preload="auto" loop="loop">   -->
+   <!-- <source src="ACDCLOOP1.mp3" />    -->
+<!-- </audio> -->
+
 <div class="container-fluid"> </div>
 <div class="row"></div>
 <!--Table-->
@@ -36,7 +40,7 @@
         <div class="col-xs-12">
           <!-- <p class="value-label">Player's hand value: <span id="playerHandValue">0</span></p> -->
         </div>
-        
+
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.js"></script>
 <script type="text/javascript" src="script.js"></script>
 </body>
